Add Javadoc. Propagat exceptions to controllers